[apache/helix] -- Enable JDK 1.8 (backward) compatibility for dependent modules of meta-client and helix-core